--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 .topnav {
-    background-color: #333
+    background-color: #000
     overflow: hidden;
 }
 
@@ -14,9 +14,9 @@ body {
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 14px;
     text-decoration: none;
-    font-size: 17px:
+    font-size: 14px:
 }
 
 .topnav a:hover {
@@ -25,6 +25,6 @@ body {
 }
 
 .topnav a.active {
-    background-color: #1287A8;
+    background-color: #0d6882;
     color: white;
 }
