--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 14px;
     text-decoration: none;
     font-size: 14px;
 }
@@ -26,4 +26,27 @@ body {
     background-color: #1287A8;
     font-family: 'Lato', sans-serif;
     text-align: center;
+}
+
+.padtest {
+    padding: 5px;
+}
+
+.bortest {
+    padding: 5px;
+    border: 1px solid black;
+}
+
+.fintest {
+    padding: 5px;
+    border: 1px dotted black;
+    margin: 5px
+}
+
+.center {
+    padding: 2px;
+    border: 1px solid black;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
